finish register, filter for login, global exception handling
